@@ -8,8 +8,9 @@ OpenDNSSEC 1.3.15rc1
   can specify the SOA serial to use in the signed zone [OPENDNSSEC-423].
 
 Bugfixes:
-* OPENDNSSEC-438: 'ods-ksmutil key generate' creates too many keys for 
-  <SharedKeys/> policies when KSK and ZSK use same algorithm and length
+* OPENDNSSEC-438: 'ods-ksmutil key generate' and the enforcer can create 
+  too many keys for <SharedKeys/> policies when KSK and ZSK use same 
+  algorithm and length
 * OPENDNSSEC-330: Signer Engine: NSEC3PARAM TTL is default TTL again, to
   prevent bad caching effects on resolvers.
 * OPENDNSSEC-397: Change "hsmutil list" output so that the table header goes 
